fix: missing site_name in translations

--- a/allauth/locale/sl/LC_MESSAGES/django.po
+++ b/allauth/locale/sl/LC_MESSAGES/django.po
@@ -403,7 +403,7 @@ msgid ""
 "\n"
 "To confirm this is correct, go to %(activate_url)s\n"
 msgstr ""
-"Pozdravljeni!"
+"Pozdravljeni od %(site_name)s!"
 "\n"
 "To sporočilo ste prejeli, ker je uporabnik %(user_display)s povezal vaš"
 "e-poštni naslov s svojim uporabniškim računom.\n"
@@ -416,7 +416,7 @@ msgid ""
 "Thank you from %(site_name)s!\n"
 "%(site_domain)s"
 msgstr ""
-"Najlepša hvala, "
+"Najlepša hvala od %(site_name)s, "
 "%(site_domain)s"
 
 #: allauth/templates/account/email/email_confirmation_subject.txt:3
@@ -433,7 +433,7 @@ msgid ""
 "It can be safely ignored if you did not request a password reset. Click the "
 "link below to reset your password."
 msgstr ""
-"Pozdravljeni!"
+"Pozdravljeni od %(site_name)s!"
 "\n"
 "To sporočilo ste prejeli, ker ste zahtevali ponastavitev "
 "gesla na %(site_name)s!\n"
@@ -481,7 +481,7 @@ msgstr "Potrdi"
 msgid ""
 "This e-mail confirmation link expired or is invalid. Please <a href="
 "\"%(email_url)s\">issue a new e-mail confirmation request</a>."
-msgstr "
+msgstr ""
 "Povezava za potrditev je neveljavna, ali pa se je iztekla. Prosimo, <a href="
 "\"%(email_url)s\">pošljite nov zahtevek za potrditev.</a>."
 
